# pygeostat

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  environment.yml  package_structure_analysis.md  pyproject.toml  requirements.txt  setup.py  temp  test.ipynb
.github/workflows/: BuildDoc.yml  ContinuousIntegration.yml  ExampleNotebooks.yml
Output/: gmm_fit.out
doc/source/: conf.py  data.rst  examples.rst  gettingstarted.rst  index.rst  installation.rst  plotting.rst  programs.rst  temp  transformations.rst  welcome.rst
docs/: Makefile  make.bat
docs/examples/: BoundaryModeling.html  Introduction.html  Introduction.ipynb  Kriging2.html
docs/source/: conf.py  contribution.rst  data.rst  examples.rst  gmm_fit.out  index.rst  programs.rst  temp  welcome.rst
docs/source/api/: datautils.rst  fortran.rst  griddef.rst  index.rst  multivariate.rst  parameters.rst  statistics.rst  transformations.rst  utility.rst
docs/source/examples/: BoundaryModeling.ipynb  Kriging1.ipynb  index.rst
docs/source/static/: style.css
docs/source/static/css/: custom.css
docs/source/user_guide/: configuration.md  getting_started.md  gettingstarted.rst  index.md  index.rst  installation.md  installation.rst  plotting.rst  plotting_gallery.md  troubleshooting.md
examples/: BoundaryModeling.ipynb  Introduction.ipynb  Kriging1.html  Kriging1.ipynb  Kriging2.ipynb  StructuralModeling.html  StructuralModeling.ipynb  process_examples.py
pygeostat/: Untitled.ipynb  __init__.py  pygeostat_parameters.py
pygeostat/data/: data.py  grid_definition.py  h5_io.py  iotools.py  iotoolsss.py
pygeostat/data/example_data/: 3d_estimate.out  griddef.txt  varmodel.out
pygeostat/datautils/: labels.py  utils.py
pygeostat/executable/: Info.txt
pygeostat/fortran/: __init__.py  compile.py  compile_fortransubs.bat  compile_linux.py  pygsb.pyd  readme.txt  sourcedefs.py  wrappers.py
pygeostat/fortran/resource/LAPACK/: eig.f90  solve.f90
pygeostat/fortran/resource/LAPACK/ALL/: dgesv.f  dgetf2.f
pygeostat/fortran/resource/old/: compile_bak.py  defaultpaths_bak.py
pygeostat/fortran/src/: backtr.f90  covasubs.for  dgm.for  esri_io.f90  fgslib_io.f90  gausskde.f90  getcollocated.f90  histcorrect.f90  linearinterp.f90  nscore.f90  pygsb.f90  sgvertices.f90  spbusim.f90  subsample.f90  supersec.f90  varcalc.f90  varmodel.f90  varsim_wrap.f90
pygeostat/fortran/src/subs/: acorni.f90  celldeclus.for  fileprocessing.f90  gslib_binary.f90  normaldist.f90  nscore_module.f90  precmod.f90  quicksort.f90  random.f90  rotationmatrix.f90  sortem.f90  stringmod.f90  varsim.for  varsubs.f90
pygeostat/fortran/tmp/pygsb/: filehandling.mod  gslib_binary.mod  pygsbmodule.c
pygeostat/plotting/: __init__.py  accuracy_plot.py  cmaps.py  correlation_matrix_plot.py  drill_plot.py  export_image.py  gaussian_mv.py  grid_slice_plot.py  histogram_plot_simulation.py  loadings_plot.py  location_plot.py  pit_plot.py  probability_plot.py  qq_plot.py  scatter_plot.py  set_style.py  slice_plot.py  subplots.py  utils.py  validation_plot.py  variogram_plot_simulation.py  variogram_utils.py
pygeostat/programs/: __init__.py  programs.py
pygeostat/statistics/: cdf.py  kde.py  postsim.py  utils.py
pygeostat/utility/: __init__.py  filemanagement.py  logging.py
src/pygeostat/: __init__.py  pygeostat_parameters.py
src/pygeostat/data/: __init__.py  data.py  grid_definition.py  h5_io.py  h5_pytables.py  iotools.py
src/pygeostat/data/example_data/: 3d_grid.out  gmm_fit.out  varcalc.out
src/pygeostat/datautils/: __init__.py  desurvey.py  fastcomps.py  labels.py  utils.py
src/pygeostat/fortran/: __init__.py  compile.py  compile_linux.py  readme.txt  sourcedefs.py
src/pygeostat/fortran/resource/: compile_lapack.py  compile_lapack_linux.py
src/pygeostat/fortran/resource/LAPACK/ALL/: dgetrf.f  dgetrs.f  dsyev.f
src/pygeostat/multivariate/: __init__.py  utils.py
src/pygeostat/plotting/: __init__.py  accuracy_plot.py  cmaps.py  contour_plot.py  correlation_matrix_plot.py  drill_plot.py  export_image.py  gaussian_mv.py  grid_slice_plot.py  histogram_plot.py  histogram_plot_simulation.py  image_grid.py  loadings_plot.py  location_plot.py  mds_plot.py  pit_plot.py  probability_plot.py  qq_plot.py  scatter_plot.py  set_style.py  slice_plot.py  subplots.py  utils.py  validation_plot.py  variogram_plot.py  variogram_plot_simulation.py  variogram_utils.py
src/pygeostat/programs/: __init__.py  program_utils.py  programs.py
src/pygeostat/statistics/: __init__.py  cdf.py  kde.py  postsim.py  utils.py
src/pygeostat/transformations/: __init__.py  rotations.py  transformations.py
src/pygeostat/utility/: __init__.py  deprecation.py  filemanagement.py  logging.py
tests/: conftest.py  test_data.py  test_gmm.py  test_parameters.py  test_plot_style.py  test_plots.py  test_statistics.py  test_utility.py
