[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "pygeostat"
dynamic = ["version"]
authors = [
    {name = "Jared Deutsch"},
    {name = "Matthew Deutsch"},
    {name = "Ryan Martin"},
    {name = "Warren Black"},
    {name = "Tyler Acorn"},
    {name = "Mostafa Hadavand"},
    {name = "Ryan Barnett"},
]
maintainers = [
    {name = "pygeostat development team", email = "hadavand@ualberta.ca"},
]
description = "Python interface for geostatistics"
readme = "README.md"
keywords = ["geostatistics"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "numba>=0.57.0",
    "h5py>=3.9.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "pyperclip>=1.8.2",
    "probscale>=0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pyevtk>=1.5.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.8.0",
    "jupyter-client>=8.3.0",
    "jupyter>=1.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Documentation = "https://www.ccgalberta.com/pygeostat/welcome.html"
Source = "https://github.com/CcgAlberta/pygeostat"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "pygeostat",
    "pygeostat.*",
]

[tool.setuptools.dynamic]
version = {attr = "pygeostat.__version__"}
